[package]
name = "trin-execution"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-execution"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "execution-layer"]
categories = ["cryptography::cryptocurrencies"]
description = "Trin's execution used for gossiping state and soon an execution layer client for Ethereum?"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]


[dependencies]
alloy-consensus.workspace = true
alloy-eips = "0.3.6"
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "4a276721965343da8312bf2034ff05775860d602", features = ["serde"]}
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
ethportal-api.workspace = true
e2store.workspace = true
eth_trie.workspace = true
hashbrown = "0.14.0"
http.workspace = true
jsonrpsee = { workspace = true, features = ["async-client", "client", "macros", "server", "server-core"]}
lazy_static.workspace = true
parking_lot.workspace = true
pin-project = "1.1.6"
prometheus_exporter.workspace = true
rayon = "1.10.0"
reqwest.workspace = true
revm.workspace = true
revm-inspectors = "0.7.4"
revm-primitives.workspace = true
rocksdb = "0.22.0"
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
trin-evm.workspace = true
trin-utils.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-test.workspace = true
