[package]
name = "trin-storage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-storage"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Storage library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow = "1.0.68"
discv5 = { version = "0.4.0", features = ["serde"] }
ethereum-types = "0.14.1"
ethportal-api = {path = "../ethportal-api"}
rand = "0.8.4"
deadpool-r2d2 = { version = "0.3.0", features = ["rt_tokio_1"] }
r2d2_sqlite = "0.19.0"
rusqlite = { version = "0.26.3", features = ["bundled"] }
strum = { version = "0.26.1", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.29"
tracing = "0.1.36"
trin-metrics = { path = "../trin-metrics" }

[dev-dependencies]
rstest = "0.18.2"
